// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is accessible with custom open/close text & <img /> 1`] = `
<body>
  <div>
    <main>
      <div
        data-rmiz-wrap="hidden"
      >
        <img
          alt="foo"
          src="foo.jpg"
          width="500"
        />
        <button
          aria-label="Open me"
          data-rmiz-btn-open="true"
        />
      </div>
    </main>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Close me"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`is accessible with defaults & <img /> 1`] = `
<body>
  <div>
    <main>
      <div
        data-rmiz-wrap="visible"
      >
        <img
          alt="foo"
          src="foo.jpg"
          width="500"
        />
        <button
          aria-label="Zoom image"
          data-rmiz-btn-open="true"
        />
      </div>
    </main>
  </div>
</body>
`;

exports[`is accessible with defaults & <img /> 2`] = `
<body>
  <div>
    <main>
      <div
        data-rmiz-wrap="hidden"
      >
        <img
          alt="foo"
          src="foo.jpg"
          width="500"
        />
        <button
          aria-label="Zoom image"
          data-rmiz-btn-open="true"
        />
      </div>
    </main>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`passes on original transform style 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
      style="transform: rotate(45deg);"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;

exports[`passes on original transform style 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
      style="transform: rotate(45deg);"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px) rotate(45deg); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`render with different props 1`] = `
<body>
  <span
    data-rmiz-wrap="visible"
  >
    <img
      alt="foo"
      src="foo.jpg"
      width="500"
    />
    <button
      aria-label="Zoom image"
      data-rmiz-btn-open="true"
    />
  </span>
</body>
`;

exports[`renders without browser environment 1`] = `
<body>
  <div
    data-rmiz-wrap="visible"
  >
    <img
      alt="foo"
      src="foo.jpg"
      width="500"
    />
    <button
      aria-label="Zoom image"
      data-rmiz-btn-open="true"
    />
  </div>
</body>
`;

exports[`unzooms on scroll 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`unzooms on scroll 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;

exports[`unzooms using ESC key 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`unzooms using ESC key 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`unzooms using ESC key 3`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;

exports[`unzooms using ESC key 4`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;

exports[`zooms/unzooms with custom open/close text & <img /> 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Open me"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Close me"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`zooms/unzooms with custom open/close text & <img /> 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Open me"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;

exports[`zooms/unzooms with defaults & <img /> 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;

exports[`zooms/unzooms with defaults & <img /> 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
    />
  </div>
</body>
`;

exports[`zooms/unzooms with defaults & <img /> 3`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
      />
    </div>
  </div>
</body>
`;
